<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lemus.oscar.mobilerobot.MRMainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:id="@+id/titleTest"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginLeft="20sp"
                android:text="@string/loadDB"
                android:layout_gravity="center_vertical"
                android:id="@+id/btnSomething"
                android:onClick="loadDB"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eraseDB"
                android:onClick="eraseDB"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map"
                android:layout_gravity="center_vertical"
                android:id="@+id/btnMap"
                android:onClick="plotMap"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saveFile"
            android:onClick="saveFile"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etFileName"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/colorAccent"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/front"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:id="@+id/tvFront"
        android:background="@color/noActive"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/left"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:id="@+id/tvLeft"
            android:background="@color/noActive"/>

        <ImageView
            android:layout_width="155dp"
            android:layout_height="155dp"
            android:src="@drawable/robot"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:id="@+id/ivCar"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/right"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:id="@+id/tvRight"
            android:background="@color/noActive"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:id="@+id/tvBack"
        android:background="@color/noActive"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/colorAccent"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/lvCoordinates"
        android:stackFromBottom="false"
        android:layout_weight="1"/>


</LinearLayout>
